--- a/ExampleApp/src/main/AndroidManifest.xml
+++ b/ExampleApp/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="pl.webdesignstudio.exampleapp.ExampleUITranslationsActivity"
+            android:label="@string/title_activity_example_uitranslations"
+            android:parentActivityName="MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
+        </activity>
     </application>
 
 </manifest>
